--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
   <script src="js/status-msg.js"></script>
   <script src="js/card.js"></script>
   <script src="js/pin.js"></script>
-  <script src="js/form.js"></script>
   <script src="js/validation.js"></script>
+  <script src="js/form.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 </html>
