--- a/index.html
+++ b/index.html
@@ -249,6 +249,6 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
-  <script src="/build/js/bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
